--- a/templates/enter.html
+++ b/templates/enter.html
@@ -6,8 +6,8 @@
 		<title>DBD Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="static/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="static/css/main.css" />
+		<noscript><link rel="stylesheet" href="static/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="static/images/logo.svg" alt="" /></span><span class="title">DBD Lab</span>
+									<span class="symbol"><img src="static/images/logo.svg" alt="" /></span><span class="title">Software Engineering Lab</span>
 								</a>
 
 							<!-- Nav -->
@@ -49,16 +49,20 @@
 								<p> </p>
 							</header>
                             <p> {{ wtf.quick_form(form) }}</p>
-
+							{% if title_given == "Register" %}
+							<p><b>Already Registered? Login <a href="{{ url_for('login') }}">here</a>.</b></p>
+							{% else %}
+							<p><b>New here? <a href="{{ url_for('register') }}">Register</a>.</b></p>
                             <!-- Footer -->
+							{% endif %}
 			</div>
 
 		<!-- Scripts -->
-			<script src="static/assets/js/jquery.min.js"></script>
-			<script src="static/assets/js/browser.min.js"></script>
-			<script src="static/assets/js/breakpoints.min.js"></script>
-			<script src="static/assets/js/util.js"></script>
-			<script src="static/assets/js/main.js"></script>
+			<script src="static/js/jquery.min.js"></script>
+			<script src="static/js/browser.min.js"></script>
+			<script src="static/js/breakpoints.min.js"></script>
+			<script src="static/js/util.js"></script>
+			<script src="static/js/main.js"></script>
 
 	</body>
 </html>
