functionality till adding messaging feature to db

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2471,6 +2471,8 @@ input, select, textarea {
 		text-overflow: ellipsis;
 		text-transform: uppercase;
 		white-space: nowrap;
+		/*new css*/
+		margin-top: 40px;
 	}
 
 		input[type="submit"].icon:before,
