--- a/templates/view_project_details.html
+++ b/templates/view_project_details.html
@@ -30,6 +30,19 @@
       <td>{{p.project_type}}</td>
       <td>{{p.funded_by}}</td>
       <td>{{p.status}}</td>
+
+<!--      <td>-->
+<!--          <form action="{{ url_for('edit_project', p_id= p.p_id)}}" method="post">-->
+<!--                      <input class="btn btn-default" name="submit" type="submit" value="Edit">-->
+<!--            </form>-->
+<!--      </td>-->
+
+      <td>
+          <form action="{{ url_for('delete_project', p_id= p.p_id)}}" method="post">
+                      <input class="btn btn-default" name="submit" type="submit" value="Delete">
+            </form>
+      </td>
+
     </tr>
     {% endfor %}
   </tbody>
