--- a/templates/view_details_candidate.html
+++ b/templates/view_details_candidate.html
@@ -31,6 +31,7 @@
       <td>{{c.duration_type}}</td>
       <td>{{c.c_email}}</td>
       <td>{{c.c_phone}}</td>
+        <td><a href="{{c.c_drive_link}}">Drive Link</a></td>
     </tr>
   </tbody>
 </table>
