--- a/templates/view_project_details.html
+++ b/templates/view_project_details.html
@@ -36,12 +36,13 @@
 <!--                      <input class="btn btn-default" name="submit" type="submit" value="Edit">-->
 <!--            </form>-->
 <!--      </td>-->
-
+      {% if admin %}
       <td>
           <form action="{{ url_for('delete_project', p_id= p.p_id)}}" method="post">
                       <input class="btn btn-default" name="submit" type="submit" value="Delete">
             </form>
       </td>
+      {% endif %}
 
     </tr>
     {% endfor %}
